# Langton

./: CMakeLists.txt  README.md  ant.cpp  ant.hpp  langton.cpp  testWorld.cpp  world.hpp
