CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(LANGTON)


SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules;${CMAKE_MODULE_PATH}")

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Boost REQUIRED)
SET(LANGTON_SRCS  world.cpp 
ant.cpp
)

# because my gcc is aging
add_definitions("-std=c++0x")

ADD_EXECUTABLE(langton ${LANGTON_SRCS} langton.cpp)
TARGET_LINK_LIBRARIES(langton ${OpenCV_LIBS})

ADD_EXECUTABLE(TestWorld ${LANGTON_SRCS} testWorld.cpp)
